--- a/site/data/imgpkg/docs/toc-mapping.yml
+++ b/site/data/imgpkg/docs/toc-mapping.yml
@@ -18,3 +18,4 @@ v0.39.x: imgpkg-v0-39-x-toc
 v0.40.x: imgpkg-v0-40-x-toc
 v0.41.x: imgpkg-v0-41-x-toc
 v0.42.x: imgpkg-v0-42-x-toc
+v0.43.x: imgpkg-v0-43-x-toc
