--- a/site/data/kapp/docs/toc-mapping.yml
+++ b/site/data/kapp/docs/toc-mapping.yml
@@ -18,3 +18,4 @@ v0.59.x: kapp-v0-59-x-toc
 v0.60.x: kapp-v0-60-x-toc
 v0.61.x: kapp-v0-61-x-toc
 v0.62.x: kapp-v0-62-x-toc
+v0.63.x: kapp-v0-63-x-toc
