--- a/site/data/kbld/docs/toc-mapping.yml
+++ b/site/data/kbld/docs/toc-mapping.yml
@@ -11,3 +11,4 @@ v0.40.x: kbld-v0-40-x-toc
 v0.41.x: kbld-v0-41-x-toc
 v0.42.x: kbld-v0-42-x-toc
 v0.43.x: kbld-v0-43-x-toc
+v0.44.x: kbld-v0-44-x-toc
