--- a/site/data/vendir/docs/toc-mapping.yml
+++ b/site/data/vendir/docs/toc-mapping.yml
@@ -15,3 +15,4 @@ v0.37.x: vendir-v0-37-x-toc
 v0.38.x: vendir-v0-38-x-toc
 v0.39.x: vendir-v0-39-x-toc
 v0.40.x: vendir-v0-40-x-toc
+v0.41.x: vendir-v0-41-x-toc
