--- a/site/data/kapp-controller/docs/toc-mapping.yml
+++ b/site/data/kapp-controller/docs/toc-mapping.yml
@@ -20,3 +20,4 @@ v0.47.x: kapp-controller-v0-47-x-toc
 v0.48.x: kapp-controller-v0-48-x-toc
 v0.49.x: kapp-controller-v0-49-x-toc
 v0.50.x: kapp-controller-v0-50-x-toc
+v0.53.x: kapp-controller-v0-53-x-toc
